syntax = "proto3";

package api;

option go_package = "./pkg/api";


service ProductV1 {
    rpc GetAll (EmptyProduct) returns (ProductList){}
    rpc Get (ProductId) returns (Product){}
    rpc Insert (Product) returns (Product){}
    rpc Update (Product) returns (Product){}
    rpc Remove (ProductId) returns (Product){}
}

message EmptyProduct {}

message Product {
    string id = 1;
    string name = 2;
    int32 price = 3;
}

message ProductList {
    repeated Product products = 1;
}

message ProductId {
    string id = 1;
}



